--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .label {
+    @apply block mb-1 text-gray-500 font-medium
+  }
+
+  .input {
+    @apply border-[1px] h-8 w-full outline-none focus:border-blue-700 focus:border-[2px] px-1 border-black rounded-md
+  }
+
+  .button-primary {
+    @apply border-[1px] p-1 rounded-md transition-all duration-300 border-black bg-blue-700 hover:opacity-80 text-white
+  }
+
+  .input-error {
+    @apply text-sm text-red-500
+  }
+}
